# Gemm-Engine

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: README.md  getting-started.md  index.md
docs/concepts/: adapters.md  sensors.md  tasks.md
docs/guides/: building-an-adapter.md
examples/: README.md  hello_mock.py
overrides/: main.html
src/: README.md
src/gemm/: README.md  __init__.py  errors.py  types.py
src/gemm/adapters/: README.md  __init__.py  base.py  mock.py
src/gemm/core/: README.md  __init__.py  engine.py  registry.py
src/gemm/tasks/: README.md  __init__.py  executor.py  task.py
src/gemm/testing/: README.md  __init__.py  contract.py
tests/: README.md  conftest.py
tests/integration/: README.md  test_engine_e2e.py
tests/unit/: README.md  test_contract_harness.py  test_mock_adapter.py  test_registry.py  test_task.py  test_types.py
